Thuan  - Big Update

--- a/170516/Content/bootstrap.css
+++ b/170516/Content/bootstrap.css
@@ -3128,19 +3128,19 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
-  background-color: #b15315;
+  background-color: #911808;
   border-color: rgba(0, 0, 0, 0);
 }
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #0c9ec7;
+  background-color: #911808;
   border-color: rgba(0, 0, 0, 0);
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #b15315;
+  background-color: #911808;
   border-color: rgba(0, 0, 0, 0);
 }
 .btn-primary:active:hover,
