--- a/170516/Views/Product/Showcase.cshtml
+++ b/170516/Views/Product/Showcase.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="index-content-wrapper container-fluid">
-    <div class="banner dark-translucent-bg" style="background-image:url('http://htmlcoder.me/preview/the_project/v.1.2/template/images/page-services-banner.jpg'); background-position: 50% 32%;">
+    <div class="banner dark-translucent-bg" style="background-image: url('../../Content/Image/showcase_image.jpg'); background-position: 50% 32%;">
         <!-- breadcrumb start -->
         <!-- ================ -->
         <div class="breadcrumb-container">
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 text-center col-md-offset-2 pv-20">
-                    <h2 class="title object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn" data-effect-delay="100">What We <strong>Provide</strong></h2>
+                    <h2 class="title object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn" data-effect-delay="100">Sản Phẩm Của Chúng Tôi</h2>
                     <div class="separator object-non-visible mt-10 animated object-visible fadeIn" data-animation-effect="fadeIn" data-effect-delay="100"></div>
                     <p class="text-center object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn" data-effect-delay="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi perferendis magnam ea necessitatibus, officiis voluptas odit! Aperiam omnis, cupiditate laudantium velit nostrum, exercitationem accusamus, possimus soluta illo deserunt tempora qui.</p>
                 </div>
