--- a/170516/Content/dlMenu/css/component.css
+++ b/170516/Content/dlMenu/css/component.css
@@ -11,11 +11,6 @@
 .dl-menuwrapper {
     width: 90%;
     float: left;
-    position: absolute;
-    -webkit-perspective: 1000px;
-    perspective: 1000px;
-    -webkit-perspective-origin: 50% 200%;
-    perspective-origin: 50% 200%;
 }
 
     .dl-menuwrapper:first-child {
@@ -37,7 +32,7 @@
         .dl-menuwrapper button:hover,
         .dl-menuwrapper button.dl-active,
         .dl-menuwrapper ul {
-            background: #df691a;
+            background: #911808;
         }
 
         .dl-menuwrapper button:after {
@@ -81,7 +76,7 @@
         }
 
 .no-touch .dl-menuwrapper li a:hover {
-    background: #df691a;
+    background: #911808;
     color: #fff;
     border-radius: 3px;
 }
