--- a/170516/Views/Home/Contact.cshtml
+++ b/170516/Views/Home/Contact.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="index-content-wrapper container-fluid">
-    <div class="banner dark-translucent-bg" style="background-image:url('http://htmlcoder.me/preview/the_project/v.1.2/template/images/page-contact-banner.jpg'); background-position: 50% 30%;">
+    <div class="banner dark-translucent-bg" style="background-image: url('../../Content/Image/contact_image.jpg'); background-position: 50% 30%;">
         <div class="breadcrumb-container">
             <div class="container">
                 <ol class="breadcrumb">
