--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -4,43 +4,19 @@
 }
 
 <div class="index-content-wrapper container-fluid">
-    <!-- header-container end -->
-    <div class="banner clearfix">
-        <div id="da-slider" class="da-slider">
-            <div class="da-slide">
-                <h2>Warm welcome</h2>
-                <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
-                <a href="#" class="da-link">Read more</a>
-                <div class="da-img"><img src="~/Content/Image/slider/4.png" alt="image01" /></div>
-            </div>
-            <div class="da-slide">
-                <h2>Easy management</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                <a href="#" class="da-link">Read more</a>
-                <div class="da-img"><img src="~/Content/Image/slider/3.png" alt="image01" /></div>
-            </div>
-            <div class="da-slide">
-                <h2>Revolution</h2>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                <a href="#" class="da-link">Read more</a>
-                <div class="da-img"><img src="~/Content/Image/slider/2.png" alt="image01" /></div>
-            </div>
-            <div class="da-slide">
-                <h2>Quality Control</h2>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-                <a href="#" class="da-link">Read more</a>
-                <div class="da-img"><img src="~/Content/Image/slider/1.png" alt="image01" /></div>
-            </div>
-            <nav class="da-arrows">
-                <span class="da-arrows-prev"></span>
-                <span class="da-arrows-next"></span>
-            </nav>
+    <div id="banner clearfix">
+        <div id="owl-demo" class="owl-carousel owl-theme">
+            <div class="item"><img src="~/Content/Image/slider/slider-1.jpg" /></div>
+            <div class="item"><img src="~/Content/Image/slider/slider-2.jpg" /></div>
+            <div class="item"><img src="~/Content/Image/slider/slider-3.jpg" /></div>
+            <div class="item"><img src="~/Content/Image/slider/slider-4.jpg" /></div>
+            <div class="item"><img src="~/Content/Image/slider/slider-5.jpg" /></div>
         </div>
     </div>
 
     <div id="page-start"></div>
 
-    <section class="pv-30">
+    <section class="pv-30 white-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -99,7 +75,7 @@
         </div>
     </section>
 
-    <section class="pv-40 section light-gray-bg clearfix">
+    <section class="pv-40 section light-gray-bg clearfix white-smoke">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
