--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
 
     <title>@ViewBag.Title</title>
 
+    <link rel="icon" href="~/Content/Image/logo.png">
+    <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700,700italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Taviraj:400,100,100italic,200,200italic,300,300italic,400italic,500,600,500italic,700,600italic,700italic,800,800italic,900,900italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=vietnamese,latin' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -20,7 +24,7 @@
             <div class="header-top dark ">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-3 col-sm-6 col-md-9">
+                        <div class="col-xs-8 col-sm-8 col-md-8">
                             <div class="header-top-first clearfix">
                                 <ul class="social-links circle small clearfix hidden-xs">
                                     <li class="skype">
@@ -50,20 +54,19 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-9 col-sm-6 col-md-3">
-                            <div id="header-top-second" class="clearfix">
-                                <div class="header-top-dropdown text-right">
-                                    <div class="btn-group dropdown">
-                                        <button type="button" class="btn dropdown-toggle btn-default btn-sm" id="btnViewCartPopup" data-toggle="dropdown"><i class="fa fa-shopping-cart pr-10"></i> Giỏ Hàng</button>
-                                        <ul class="dropdown-menu dropdown-menu-right dropdown-animation" style="z-index: 9000;">
-                                            <li id="cartPartialView">
-                                                @*@{Html.RenderAction("ViewCartMinimal", "Product");}*@
-                                            </li>
-                                        </ul>
+                        @*<div class="col-xs-4 col-sm-4 col-md-4">
+                                <div id="header-top-second" class="clearfix">
+                                    <div class="header-top-dropdown text-right">
+                                        <div class="btn-group dropdown">
+                                            <button type="button" class="btn dropdown-toggle btn-default btn-sm" id="btnViewCartPopup" data-toggle="dropdown"><i class="fa fa-shopping-cart pr-10"></i> Giỏ Hàng</button>
+                                            <ul class="dropdown-menu dropdown-menu-right dropdown-animation" style="z-index: 9000;">
+                                                <li id="cartPartialView">
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </div>*@
                     </div>
                 </div>
             </div>
@@ -99,7 +102,7 @@
                                             </div>
                                             <div class="collapse navbar-collapse" id="navbar-collapse-1">
                                                 <!-- main-menu -->
-                                                <ul class="nav navbar-nav ">
+                                                <ul class="nav navbar-nav main-menu">
                                                     <li class="mega-menu">
                                                         <a href="@Url.Action("Index","Home")">Trang Chủ</a>
                                                     </li>
@@ -113,6 +116,22 @@
                                                         <a href="@Url.Action("Contact", "Home")">Liên Hệ</a>
                                                     </li>
                                                 </ul>
+
+                                                <div class="header-dropdown-buttons hidden-xs ">
+                                                    <div class="btn-group dropdown">
+                                                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="true" id="btnViewCartPopup">
+                                                            <i class="fa fa-shopping-cart"></i><span class="cart-count default-bg">
+                                                                <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+                                                                <span class="sr-only">Loading...</span>
+                                                            </span>
+                                                        </button>
+                                                        <ul class="dropdown-menu dropdown-menu-right dropdown-animation cart">
+                                                            <li id="cartPartialView">
+
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </nav>
@@ -124,7 +143,7 @@
             </header>
         </div>
 
-        @RenderBody();
+        @RenderBody()
 
         <footer id="footer" class="clearfix ">
             <div class="subfooter">
@@ -160,6 +179,7 @@
             ViewPartialCart: "@Url.Action("ViewCartMinimal", "Product")",
             CheckOut: "@Url.Action("CheckOut", "Product")",
             CheckoutConfirmation: "@Url.Action("CheckoutConfirmation", "Product")",
+            LoadSystemInformation: "@Url.Action("LoadSystemInformation", "Home")"
         };
 
         var sampleRegex = {
@@ -187,6 +207,27 @@
             "showMethod": "fadeIn",
             "hideMethod": "fadeOut"
         }
+
+        var initializeSetup = function () {
+            $.ajax({
+                url: staticUrl.LoadSystemInformation,
+                method: "GET",
+                success: function (data) {
+                    if (data != null) {
+                        // cart
+                        $('.cart-count').text(data.data.CartCount);
+                    }
+                },
+                error: function (e) {
+                    toastr.error('Có lỗi xảy ra khi khởi động. Làm ơn nhấn F5 để thử lại.');
+                }
+            });
+        }
+
+        // here comes the ajax to load all the system variables
+        $(document).ready(function () {
+            initializeSetup();
+        });
     </script>
 </body>
 </html>
